--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "lucide-react": "^0.539.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
